--- a/package.json
+++ b/package.json
@@ -11,11 +11,15 @@
     "@nomicfoundation/hardhat-verify": "^2.0.0",
     "@typechain/ethers-v6": "^0.5.0",
     "@typechain/hardhat": "^9.0.0",
+    "@types/bitcore-lib": "^0.15.6",
     "@types/chai": "^4.2.0",
+    "@types/elliptic": "^6.4.18",
     "@types/mocha": ">=9.1.0",
     "@types/node": ">=16.0.0",
+    "bitcore-lib": "^10.0.23",
     "chai": "^4.2.0",
     "dotenv": "^16.4.4",
+    "elliptic": "^6.5.4",
     "ethers": "^6.4.0",
     "hardhat": "^2.20.1",
     "hardhat-gas-reporter": "^1.0.8",
