--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
     "bitcore-lib": "^10.0.23",
     "chai": "^4.2.0",
     "dotenv": "^16.4.4",
-    "elliptic": "^6.5.4",
+    "ethereumjs-util": "^7.1.5",
     "ethers": "^6.4.0",
     "hardhat": "^2.20.1",
     "hardhat-gas-reporter": "^1.0.8",
