--- a/package.json
+++ b/package.json
@@ -1,8 +1,14 @@
 {
   "name": "bit-sig-verifier-in-eth",
-  "version": "0.0.1",
-  "main": "index.js",
+  "version": "0.0.14",
+  "main": "dist/index.js",
+  "module": "dist/index.js",
+  "types": "dist/index.d.ts",
   "license": "MIT",
+  "scripts": {
+    "build": "vite build",
+    "test": "tsx test/BitMessage.ts"
+  },
   "devDependencies": {
     "@nomicfoundation/hardhat-chai-matchers": "^2.0.0",
     "@nomicfoundation/hardhat-ethers": "^3.0.0",
@@ -20,12 +26,19 @@
     "chai": "^4.2.0",
     "dotenv": "^16.4.4",
     "ethereumjs-util": "^7.1.5",
-    "ethers": "^6.4.0",
+    "ethers": "^6.11.1",
     "hardhat": "^2.20.1",
     "hardhat-gas-reporter": "^1.0.8",
-    "solidity-coverage": "^0.8.0",
+    "solidity-coverage": "^0.8.1",
     "ts-node": ">=8.0.0",
+    "tsx": "^4.7.1",
     "typechain": "^8.3.0",
-    "typescript": ">=4.5.0"
+    "typescript": ">=4.5.0",
+    "vite": "^5.1.3",
+    "vite-plugin-dts": "^3.7.2"
+  },
+  "dependencies": {
+    "@rollup/plugin-inject": "^5.0.5",
+    "buffer": "^6.0.3"
   }
 }
