--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,11 +1,14 @@
 {
+  "files": ["src/index.ts"],
   "compilerOptions": {
     "target": "es2020",
     "module": "commonjs",
+    "declaration": true,
     "esModuleInterop": true,
     "forceConsistentCasingInFileNames": true,
     "strict": true,
     "skipLibCheck": true,
-    "resolveJsonModule": true
+    "resolveJsonModule": true,
+    "lib": ["es2020", "dom"]
   }
 }
